first completed passthrough for copy, fixed contrast javascript for nav bar

--- a/dev/styles/partials/_footer.scss
+++ b/dev/styles/partials/_footer.scss
@@ -3,12 +3,13 @@ footer {
 
   h3 {
     margin: 0 auto;
+    min-width: 300px;
     width: 15%;
     margin-bottom: 40px;
   }
 
   ul {
-    width: 30%;
+    width: 40%;
     margin: 0 auto;
   }
 
@@ -55,6 +56,12 @@ footer {
   a {
     height: 100%;
     display: block;    
+  }
+
+  p {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 22px;
   }
 }
 
