--- a/dev/styles/partials/_gallery.scss
+++ b/dev/styles/partials/_gallery.scss
@@ -1,5 +1,9 @@
 .gallery {
-  padding: 120px 0;  
+  padding: 120px 0;
+  
+  li {
+    max-width: 1024px;
+  }
 }
 
 .main-carousel {
